# src/routes/index.ts
@@ -2,8 +2,10 @@ import { Router } from 'express';
 
 import portofolioRouter from './portofolio.routes'
 import uploadRouter from './uploads.routes';
-import { login } from '../controllers/auth.controller';
 import artikelRouter from './artikel.routes';
+import categoryRouter from './category.routes';
+
+import { login } from '../controllers/auth.controller';
 import { authenticateToken } from '../middlewares/auth.middleware';
 
 const router = Router();
@@ -11,7 +13,8 @@ const router = Router();
 router.use('/upload', authenticateToken, uploadRouter)
 
 router.use('/portofolio', portofolioRouter);
-router.use('/artikel', artikelRouter)
+router.use('/artikel', artikelRouter);
+router.use('/category', categoryRouter)
 
 router.post('/login', login);
 
